# rl_math

./: .gitignore  deepspeed-config.json  fsdp.yaml  full_runner.sh  hybrid.sh  math_server.py  openrlhf_ppo.sh  pyproject.toml  ray_commands.sh  sweep.out  sweep.sh  trl_config.yaml  trl_out.out  trl_test.py
MATH_rl_2/: math_env.py
MATH_rl_env/: __init__.py  math_env.py
data/: dataset_maker.py  maths_dataset.json  maths_dataset.py  maths_dataset_eleuther.json  maths_dataset_input.json
