[project]
name = "rl_math"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1",
    "openrlhf[vllm]",
    "ray[train]>=2.12.0",
    "datasets>=3.2.0",
    "mypy>=1.14.1",
    "xgrammar==0.1.11",
    "trl>=0.15.1",
    "vllm>=0.7.0",
]

[build-system]
requires = ["setuptools", "wheel", "torch>=2.5.1"]

[tool.uv]
cache-dir = "/data1/joey/uv_cache"

[tool.pytorch-extensions]
build-directory = "/data1/joey/torch_extensions"

[tool.deepspeed]
extra-compile-args = ["-ftemporary-directory=/data1/joey/tmp"]

[tool.setuptools]
packages = []

[tool.uv.sources]
openrlhf = { git = "https://github.com/JYudelson1/OpenRLHF-reward-hacking", branch = "no-mask-parallel-new" }
trl = { git = "https://github.com/willccbb/trl", branch = "grpo-envs" }
